--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bufferutil": "^4.0.8",
     "focus-trap-react": "^10.2.3",
     "isomorphic-dompurify": "^1.8.0",
     "jsdom": "^22.1.0",
