--- a/package.json
+++ b/package.json
@@ -12,18 +12,22 @@
     "bufferutil": "^4.0.8",
     "focus-trap-react": "^10.2.3",
     "isomorphic-dompurify": "^1.8.0",
-    "jsdom": "^22.1.0",
     "next": "13.5.6",
     "next-themes": "^0.2.1",
     "pocketbase": "^0.19.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^7.0.0",
     "utf-8-validate": "^6.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.9",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
