--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bufferutil": "^4.0.8",
     "focus-trap-react": "^10.2.3",
     "isomorphic-dompurify": "^1.8.0",
-    "next": "13.5.6",
+    "next": "^14.0.1",
     "next-themes": "^0.2.1",
     "pocketbase": "^0.19.0",
     "react": "^18",
