--- a/package.json
+++ b/package.json
@@ -19,15 +19,14 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.0",
-    "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^7.0.0",
     "utf-8-validate": "^6.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-syntax-highlighter": "^15.5.9",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
